etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Wed Apr 19 00:05:48 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j DNAT --to 192.168.1.1:25
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to 192.168.1.1:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to 192.168.1.1:443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 587 -j DNAT --to 192.168.1.1:587
-A PREROUTING -i eth0 -p tcp -m tcp --dport 993 -j DNAT --to 192.168.1.1:993
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2212 -j DNAT --to 192.168.1.1:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 3001 -j DNAT --to 192.168.1.1:3001
-A PREROUTING -i eth0 -p tcp -m tcp --dport 7777 -j DNAT --to 192.168.1.1:7777
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25565 -j DNAT --to 192.168.1.1:25565
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Apr 19 00:05:48 2017
# Generated by iptables-save v1.4.21 on Wed Apr 19 00:05:48 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i eth0 -p tcp -m tcp --dport 2211 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 21194 -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -i br0  -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Wed Apr 19 00:05:48 2017
